# Stackyy

./: .gitignore  Cargo.toml  README.md
examples/: funcs.scy  hello_world.scy  stack_ops.scy
examples/funcs-scy/: funcs-main.scy  funcs-meta.scy.yml
examples/hello-world-scy/: hello-world-main.scy  hello-world-meta.scy.yml
examples/stack-ops-scy/: stack-ops-main.scy  stack-ops-meta.scy.yml
src/: args.rs  main.rs  parser.rs  vm.rs
src/opt/: files.scy  logging.scy  mod.rs
src/util/: compile.rs  internals.rs  mod.rs  operation.rs  position.rs  register_type.rs  token.rs  type_check.rs  types.rs
src/util/operations/: functions.rs  internals.rs  mod.rs  simple.rs
src/util/operations/descriptors/: file.rs  mod.rs
