[package]
name = "stackyy"
version = "0.1.0"
edition = "2021"
description = "The Stackyy-Lang VM/Compiler/Interpreter"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
backtrace = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
bincode = "*"

[profile.release-opt]
inherits = "release"
strip = true
opt-level = "z"
lto = true
panic = "abort"